--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -53,15 +53,15 @@
                     </div>
             <h3>SOCIALS</h3>
 
-            <div>
+            <div class="space">
                 <a  class="fa fa-linkedin"> @samiM.khan231</a>
                </div>
                
-            <div>
+            <div class="space">
                 <a  class="fa fa-facebook"> @sami.khan.94651771</a>
                </div>
                
-            <div>
+            <div class="space">
                 <a  class="fa fa-instagram"> @_sami_khann</a>
                </div>
    
@@ -184,13 +184,13 @@ cart, blogs and payment integration. <br>
 <div> <span class="edu">SKILLS</span></div>
 <ul class="skills-container">
     <li class="skill">Logical approach to work</li>
-    <li class="skill">Relationship Building</li>
-    <li class="skill">Problem Solving</li>
+    <li class="skill padd">Relationship Building</li>
+    <li class="skill padd">Problem Solving</li>
 </ul>
 <ul class="skills-container">
     <li class="skill">Time Management</li>
-    <li class="skill">Creative mindset</li>
-    <li class="skill">Attention to Detail</li>
+    <li class="skill pad">Creative mindset</li>
+    <li class="skill pad">Attention to Detail</li>
  
 </ul>
 <ul class="skills-container">
