--- a/Lab_Task_1/index.html
+++ b/Lab_Task_1/index.html
@@ -40,7 +40,7 @@
 
     <header>
         <div class="logo">
-            <img src="img\2.PNG" alt="Error">
+            <img src="img\12.PNG" alt="Error">
         </div>
 
         <div class="header-content">
@@ -48,7 +48,7 @@
             <h3>Crafting Your Digital Masterpiece, One Component at a Time!</h3>
         </div>
 
-        <div class="search-bar">
+        <div class="search-bar">s
             <input type="text" placeholder="Search...">
             <button type="button">Search</button>
         </div>
@@ -59,7 +59,7 @@
         <a href="#">Home</a>
         <a href="#">Products</a>
         <a href="#">PC builder</a>
-        <a href="#">About US</a>
+        <a href="#">Contact US</a>
         <a href="#">SHOP</a>
     </nav>
 
@@ -257,6 +257,7 @@
 
         </div>
     </div>
+    
     <div class="section1">
         <h3>Our Built in Builds</h3>
         <div>"Explore Power and Precision with Our Featured PC Products - Unleash Performance at Your Fingertips!"</div>
