Changes in contact us form.

--- a/Assignment_2/contact.html
+++ b/Assignment_2/contact.html
@@ -17,13 +17,54 @@
 </head>
 
 <body>
+
+    <div class="social-bar">
+        <div class="social-icons">
+            <div>
+                <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
+            </div>
+
+            <div>
+                <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
+            </div>
+
+            <div>
+                <a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a>
+            </div>
+        </div>
+        <a class="help-link" href="mailto:info@techcraft.pk">Need help? info@techcraft.pk</a>
+    </div>
+
+    <header>
+        <div class="logo">
+            <img src="img\12.PNG" alt="Error">
+        </div>
+
+        <div class="header-content">
+            <h1>TechCraft</h1>
+            <h3>Crafting Your Digital Masterpiece, One Component at a Time!</h3>
+        </div>
+
+    </header>
+
+
+    <nav>
+        <a href="landing.html">Home</a>
+        <a href="#">Products</a>
+        <a href="#">PC builder</a>
+        <a href="contact.html">Contact US</a>
+        <a href="#">SHOP</a>
+    </nav>
+
+
+
     <h1 class="heading">Get in touch</h1>
 
     <div class="parent">
         <div class="left">
             <h5>Send Us a Message</h5>
             <span>Have something on your mind? We'd love to hear from you! Use the form below to send us a message, and our team will respond promptly. Your feedback is important to us, and we're here to help with any questions or concerns.</span>
-            <form id="contactForm">
+            <form id="contactForm" class="pads">
                 <div>
                     <input type="text" name="firstName" placeholder="Your First Name" required> 
                     <input type="text" name="lastName" placeholder="Your Last Name" required>
@@ -42,19 +83,19 @@
 
         <div class="right">
 
-            <h5>Call Us</h5>
+            <h4>Call Us</h5>
 
             <span>Need assistance or prefer to speak with us directly? Feel free to give us a call! Our team is here to
                 help
                 you with any inquiries or support you may need.</span>
-            <p><i class="material-icons icon">phone</i>Call: (+92) 334 9920239</p>
+            <p><i class="material-icons icon pads" style="color: red; font-size: 40px;">phone</i> Call: (+92) 334 9920239</p>
 
-            <h5>Visit Us</h5>
+            <h4 class="pads">Visit Us</h5>
 
             <span>Planning to drop by? We'd love to welcome you to our location! Find us at the following
                 address:</span>
 
-            <p><i class="material-icons icon">home</i>Lahore, Pakistan</p>
+            <p><i class="material-icons icon pads" style="color: red; font-size: 40px;">home</i> Lahore, Pakistan</p>
         </div>
     </div>
 
@@ -65,7 +106,7 @@
 
     <div class="parent2">
         <div class="left2">
-            <h6>FAQ</h6>
+            <h5>FAQ</h5>
             <h1>Frequently</h1>
             <h1>asked</h1>
             <h1>questions.</h1>
@@ -74,12 +115,12 @@
         <div class="right2">
             <h3> Frequently Asked Questions (FAQ)</h3>
 
-            <span>Got questions? We've got answers! Explore our Frequently Asked Questions to find the information you
+            <span class="pads">Got questions? We've got answers! Explore our Frequently Asked Questions to find the information you
                 need.
                 If you don't see what you're looking for, feel free to reach out to our team for personalized
                 assistance.</span>
 
-            <div class="faq-container">
+            <div class="faq-container pads">
                 <div class="faq-item">
                     <div class="faq-question" onclick="toggleAnswer(this)">
                         <span>1. Do you offer free shipping?</span>
