--- a/Lab_Task_1/index.html
+++ b/Lab_Task_1/index.html
@@ -48,7 +48,7 @@
             <h3>Crafting Your Digital Masterpiece, One Component at a Time!</h3>
         </div>
 
-        <div class="search-bar">s
+        <div class="search-bar">
             <input type="text" placeholder="Search...">
             <button type="button">Search</button>
         </div>
