--- a/midterm lab/index.html
+++ b/midterm lab/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Website</title>
+    <title>US Today</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -26,13 +26,12 @@
 <body>
 
     <nav class="navbar">
-        <div class="blue-circle"></div>
-        <p class="bold">USA TODAY</p>
+        <div class="blue-circle"><p class="padding">USA TODAY</p></div>
         <a href="#" class="bold">In tianeptine's grip</a>
         <a href="#" class="bold">See the 'super bloom'</a>
         <a href="#" class="bold">Solar eclipse guide</a>
         <a href="#" class="bold">Play to win</a>
-        <a href="#" class="head bold">SUBSCRIBE NOW</a>
+        <p class="blue">SUBSCRIBE NOW</p>
     </nav>
 
     <nav>
