--- a/midterm lab/index.html
+++ b/midterm lab/index.html
@@ -159,6 +159,10 @@
             <img src="ad2.png" alt="">
         </div>
     </div>
+    <div class="center">
+        <h4 class="center">Advertisement - Scroll for more</h4>
+    <img src="ad3.png" alt="">
+</div>
 </body>
 
 </html>
